[project]
name = "mcp-server-pytest"
version = "0.1.0"
description = "MCP server offering automated test runner and coverage analysis using pytest"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
